plugins {
    id 'java'
    id 'application'
    id "com.github.johnrengelman.shadow" version "5.0.0"
}

group 'com.company'
version '1.0-SNAPSHOT'

sourceCompatibility = '1.8'
targetCompatibility = '1.8'

mainClassName = 'com.company.LogIngestApp'

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'io.dropwizard', name: 'dropwizard-core', version: '1.3.12'
    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.10.2'
}

run {
    args = ['server', 'config.yml']
}